# libvgio

./: .gitmodules  CMakeLists.txt  README.md  install.sh  test.cpp
cmake/: FindHTSlib.cmake  VGioConfig.cmake.in
include/vg/io/: alignment_emitter.hpp  alignment_io.hpp  basic_stream.hpp  blocked_gzip_input_stream.hpp  blocked_gzip_output_stream.hpp  edit.hpp  fdstream.hpp  gafkluge.hpp  hfile_cppstream.hpp  hfile_internal.hpp  json2pb.h  json_stream_helper.hpp  message_emitter.hpp  message_iterator.hpp  protobuf_emitter.hpp  protobuf_iterator.hpp  register_loader_saver_distance_index.hpp  register_loader_saver_gbwt.hpp  register_loader_saver_gcsa.hpp  register_loader_saver_lcp.hpp  register_loader_saver_minimizer.hpp  register_loader_saver_snarl_manager.hpp  register_loader_saver_vg.hpp  register_loader_saver_xg.hpp  registry.hpp  stream.hpp  stream_multiplexer.hpp  vpkg.hpp
src/: alignment_emitter.cpp  alignment_io.cpp  basic_stream.cpp  bin2ascii.h  blocked_gzip_input_stream.cpp  blocked_gzip_output_stream.cpp  edit.cpp  hfile_cppstream.cpp  json2pb.cpp  message_emitter.cpp  message_iterator.cpp  register_loader_saver_distance_index.cpp  register_loader_saver_gbwt.cpp  register_loader_saver_gcsa.cpp  register_loader_saver_lcp.cpp  register_loader_saver_minimizer.cpp  register_loader_saver_snarl_manager.cpp  register_loader_saver_vg.cpp  register_loader_saver_xg.cpp  registry.cpp  stream.cpp  stream.hpp  stream_multiplexer.cpp  vpkg.cpp
